--- a/005-Python-Standard-Library/Python Standard Library - Workshop.ipynb
+++ b/005-Python-Standard-Library/Python Standard Library - Workshop.ipynb
@@ -6,7 +6,7 @@
       "name": "Python Standard Library - Workshop",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMfUUJbz3RhNatffEtVJqEV",
+      "authorship_tag": "ABX9TyNMRS8sVgJ7CsmRufWDB3+B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,6 +97,173 @@
       "source": [
         "def listdir_with_details(path='.'):\n",
         "  # Your code starts here..."
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kHYTtrWGj9WP",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 3. Random IDs\n",
+        "\n",
+        "We want to generate random IDs for videos on a video sharing platform. We choose IDs to be 64 bits long, to reduce chances of [collisions](https://everydayinternetstuff.com/2015/04/hash-collision-probability-calculator/).\n",
+        "\n",
+        "We will use these IDs in URLs and store them in various databases, so we need to keep them in a format that allows for easy interchange. We choose Base-64 encoding for this task.\n",
+        "\n",
+        "Use the `random` and the `base64` modules to write a `generate_random_id` function that returns a random string representing 64 bits of random data encoded in Base-64.\n",
+        "\n",
+        "Example:\n",
+        "\n",
+        "```python\n",
+        "generate_random_id()\n",
+        "'E5ibh6jCnPs='\n",
+        "```\n",
+        "\n",
+        "Tips and reminders:\n",
+        "\n",
+        "* A bit is a minimal amount of data, representing one binary digit $0$ or $1$\n",
+        "* A byte is a number between 0 and 255, $0 \\leq B \\lt 256 = 2^8$.\n",
+        "* In other words, there are 8 bits in a byte.\n",
+        "* `base64` takes `bytes` type as input. You can get a `bytes` object from a `str` or a `list` as shown below\n",
+        "* `base64` has a pair of `urlsafe_b64encode`/`urlsafe_b64decode` functions that change the \"additional characters\" from `+` and `/` to URL-compatible characters. Use those if you can.\n",
+        "\n",
+        "```python\n",
+        "bytes('Hello😀World!', 'utf-8')\n",
+        "b'Hello\\xf0\\x9f\\x98\\x80World!'\n",
+        "\n",
+        "bytes([0, 13, 32, 245])\n",
+        "b'\\x00\\r \\xf5'\n",
+        "\n",
+        "# Going from bytes back to str\n",
+        "b = bytes([104, 101, 108, 108, 111])\n",
+        "b.decode()\n",
+        "'hello'\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8egxmwMLo9z3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def generate_random_id():\n",
+        "  # Your code starts here..."
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "76ito4Ja1IFz",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 4. What day is it?\n",
+        "\n",
+        "Write a function `what_day` that takes a positive/negative number of days, and returns a `datetime` object representing the day it will be/was by adding/removing the offset.\n",
+        "\n",
+        "Write a program that asks the user for a number of days and outputs the result in human-readable form. We should be able to read:\n",
+        "\n",
+        "* The year\n",
+        "* The month\n",
+        "* The day\n",
+        "* The day of the week\n",
+        "\n",
+        "Example:\n",
+        "\n",
+        "```\n",
+        "How many days do you want to time travel? -65\n",
+        "65 days ago, it was Monday, February 17 2020.\n",
+        "```\n",
+        "\n",
+        "> **HINT:** Look into the specification of [`strftime`](https://docs.python.org/3/library/datetime.html#strftime-and-strptime-format-codes)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3mTyieK41Hkw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def what_day(day_offset):\n",
+        "  # Your code starts here..."
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kOpE0JHx2Evo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "offset = int(input('How many days do you want to time travel? '))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ulDJyfU5-Wc6",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 5. Parse some JSON\n",
+        "\n",
+        "JSON is a common interchange format for web API data.\n",
+        "\n",
+        "Download JSON from the web, parse it with Python and look at the results.\n",
+        "\n",
+        "Run the first block to download some random JSON data to a string.\n",
+        "\n",
+        "The block you will write should:\n",
+        "\n",
+        "* print the data in `json_data`\n",
+        "* parse the data in `json_data` to a python object\n",
+        "* print that object and its type\n",
+        "* serialize the python object to a (more compact) JSON format, and print it out\n",
+        "\n",
+        "Compare the output of your serialization with the data from the URL."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sc85FyfA-jaQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import requests\n",
+        "\n",
+        "res = requests.get('https://httpbin.org/json')\n",
+        "json_data = res.text"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5Y1fCAot-ypP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Your code starts here..."
       ],
       "execution_count": 0,
       "outputs": []
