--- a/005-Python-Standard-Library/Python Standard Library - Chap 02 - Demo.ipynb
+++ b/005-Python-Standard-Library/Python Standard Library - Chap 02 - Demo.ipynb
@@ -6,7 +6,6 @@
       "name": "Python Standard Library - Chap 02 - Demo",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMieH50dWEpqSllp+Zfm3t3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -116,6 +115,22 @@
       },
       "source": [
         "re.split('\\s+', opening_crawl)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pGyjG1W1RqDI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for m in re.finditer(r'[A-Z][A-Za-z]+', opening_crawl):\n",
+        "  span = m.span()\n",
+        "  s = m.group()\n",
+        "  print(f'[{span[0]}:{span[1]}] = \"{s}\"')"
       ],
       "execution_count": 0,
       "outputs": []
