--- a/005-Python-Standard-Library/Python Standard Library - Chap 02 - Demo.ipynb
+++ b/005-Python-Standard-Library/Python Standard Library - Chap 02 - Demo.ipynb
@@ -128,7 +128,7 @@
       },
       "source": [
         "for m in re.finditer(r'[A-Z][A-Za-z]+', opening_crawl):\n",
-        "  span = m.span()\n",
+        "  span = m.spdan()\n",
         "  s = m.group()\n",
         "  print(f'[{span[0]}:{span[1]}] = \"{s}\"')"
       ],
