--- a/001-First-Steps/First Steps - Chap 03 - Demo.ipynb
+++ b/001-First-Steps/First Steps - Chap 03 - Demo.ipynb
@@ -10,7 +10,7 @@
         "n2Y1tAFyVuq8",
         "NuIaiuaQ9CRr"
       ],
-      "authorship_tag": "ABX9TyOaNNSXxncJxLm0OfIr+RUd",
+      "authorship_tag": "ABX9TyOBG9pwMhIkUw2A4mvlqXOl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -108,6 +108,20 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "KHt05fqZBQGY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(\"\"\"This is a line.\n",
+        "This is a new line\"\"\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "EWBZy3arWanr",
         "colab_type": "code",
         "colab": {}
@@ -116,19 +130,6 @@
         "opening_line = 'It was a bright cold day in April, and the clocks were striking thirteen.'\n",
         "\n",
         "print(opening_line)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Ok3y40uNWx3R",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
       ],
       "execution_count": 0,
       "outputs": []
