--- a/999-Extras/List Comprehensions Cookbook.ipynb
+++ b/999-Extras/List Comprehensions Cookbook.ipynb
@@ -11,17 +11,21 @@
         "OcJCSt3QJY8-",
         "qiuOb4aDcnzV",
         "k39-yq71vPd1",
+        "XW6wcZSrzmxE",
         "c9Pi2yEgSMQR",
         "kgao-FiZzxJT",
+        "kj-Wt18jz2Wh",
+        "dKdSfkhn1P6t",
+        "gt_-b4XB0nsq",
+        "udjiTBUj3-Xf",
         "ZlMm9c_gYV2k",
         "dxJrtb4PYuwb",
         "uRx5BWRUlmnT",
         "Uv-hkAiPK9Ls",
-        "QX9tHTrpGWRi",
-        "5e2Fp7TYyPRH"
+        "QX9tHTrpGWRi"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPr2DGTFMY69ErnxYNQwXt8",
+      "authorship_tag": "ABX9TyNLMNlljuiZ/3Rng903O31I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -491,16 +495,16 @@
       "metadata": {
         "id": "psnLazWvz0JX",
         "colab_type": "code",
+        "outputId": "f0e05f80-9b1e-46c2-9d3f-d5a8bce96b7d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 289
-        },
-        "outputId": "f0e05f80-9b1e-46c2-9d3f-d5a8bce96b7d"
+        }
       },
       "source": [
         "[(x, y) for x in s for y in s]"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -548,16 +552,16 @@
       "metadata": {
         "id": "czTOvfvF1VGA",
         "colab_type": "code",
+        "outputId": "01d16a68-a4e6-464b-966d-de84b29b4da5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
-        },
-        "outputId": "01d16a68-a4e6-464b-966d-de84b29b4da5"
+        }
       },
       "source": [
         "[(x, y) for x in s for y in s if x != y]"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -601,16 +605,16 @@
       "metadata": {
         "id": "SP0G5S-905eq",
         "colab_type": "code",
+        "outputId": "5ff6f41a-c633-4a72-d0ef-c554548dbab7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5ff6f41a-c633-4a72-d0ef-c554548dbab7"
+        }
       },
       "source": [
         "[(x, y) for i, x in enumerate(s) for y in s[i+1:]]"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -652,7 +656,7 @@
       "source": [
         "[(x, y) for i, x in enumerate(s) for y in s[i:]]"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -842,11 +846,11 @@
       "metadata": {
         "id": "xNSNbaS3ljtJ",
         "colab_type": "code",
+        "outputId": "3e4f0e41-e6a7-453d-9a67-94f68c234018",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
-        },
-        "outputId": "3e4f0e41-e6a7-453d-9a67-94f68c234018"
+        }
       },
       "source": [
         "from string import ascii_letters\n",
@@ -857,7 +861,7 @@
         "avg_len = sum([len(w) for w in words]) / len(words)\n",
         "print(avg_len)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -987,61 +991,51 @@
       "metadata": {
         "id": "qDQXe_SYyvcj",
         "colab_type": "code",
-        "outputId": "18cb08c8-f624-4860-ee7d-2e061ac30c51",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 578
-        }
+        "colab": {}
       },
       "source": [
         "text = \"\"\"We were somewhere around Barstow on the edge of the desert when the drugs began to take hold. I remember saying something like \"I feel a bit lightheaded; maybe you should drive. . . .\" And suddenly there was a terrible roar all around us and the sky was full of what looked like huge bats, all swooping and screeching and diving around the car, which was going about a hundred miles an hour with the top down to Las Vegas.\"\"\"\n",
         "{char: text.count(char) for char in text}"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "77JNnYSrhqsl",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### Map items by key\n",
+        "\n",
+        "Take a list of dictionaries and map them by (unique) key, for fast and easy lookup."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "old5-Ocxhz3H",
+        "colab_type": "code",
+        "outputId": "38b39b87-1b57-4e7e-a6ce-0f43ce83af92",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "albums = [{'id': 'yckMJOZwArQ', 'title': 'For Those About To Rock We Salute You', 'artist': 'AC/DC'}, {'id': 'nr6AARds07U', 'title': 'Balls to the Wall', 'artist': 'Accept'}, {'id': 'xKrwMhRFR04', 'title': 'Restless and Wild', 'artist': 'Accept'}, {'id': 'm3P8ltkP88o', 'title': 'Let There Be Rock', 'artist': 'AC/DC'}, {'id': 'AWyCZKX5Hk0', 'title': 'Big Ones', 'artist': 'Aerosmith'}, {'id': '5igVPC6_Mjg', 'title': 'Jagged Little Pill', 'artist': 'Alanis Morissette'}, {'id': 'fONdsGu_VE8', 'title': 'Facelift', 'artist': 'Alice In Chains'}, {'id': 'JYwWkcUA7so', 'title': 'Warner 25 Anos', 'artist': 'Antônio Carlos Jobim'}, {'id': 'TvOtypkLPWE', 'title': 'Plays Metallica By Four Cellos', 'artist': 'Apocalyptica'}, {'id': 'PSXbaB1HHMo', 'title': 'Audioslave', 'artist': 'Audioslave'}, {'id': 'gnjfPndIpk4', 'title': 'Out Of Exile', 'artist': 'Audioslave'}, {'id': 'RogB5cekXEc', 'title': 'BackBeat Soundtrack', 'artist': 'BackBeat'}, {'id': 'dJQt0CIHZ_c', 'title': 'The Best Of Billy Cobham', 'artist': 'Billy Cobham'}, {'id': '1O2Xw9I-ULo', 'title': 'Alcohol Fueled Brewtality Live! [Disc 1]', 'artist': 'Black Label Society'}, {'id': 'Hyaoenfa90s', 'title': 'Alcohol Fueled Brewtality Live! [Disc 2]', 'artist': 'Black Label Society'}, {'id': '3beawiaz834', 'title': 'Black Sabbath', 'artist': 'Black Sabbath'}, {'id': 'wBzKWrUOYow', 'title': 'Black Sabbath Vol. 4 (Remaster)', 'artist': 'Black Sabbath'}, {'id': 'GG5qi_LQBf0', 'title': 'Body Count', 'artist': 'Body Count'}, {'id': '5lAH14uq-w8', 'title': 'Chemical Wedding', 'artist': 'Bruce Dickinson'}, {'id': 'Cyar6qvI-eQ', 'title': 'The Best Of Buddy Guy - The Millenium Collection', 'artist': 'Buddy Guy'}, {'id': 'PdIJ4hlZnrg', 'title': 'Prenda Minha', 'artist': 'Caetano Veloso'}, {'id': 'H1VtjfyzM70', 'title': 'Sozinho Remix Ao Vivo', 'artist': 'Caetano Veloso'}, {'id': 'ADzUkA4bNUw', 'title': 'Minha Historia', 'artist': 'Chico Buarque'}, {'id': 'HSU0EwgBlZ8', 'title': 'Afrociberdelia', 'artist': 'Chico Science & Nação Zumbi'}, {'id': 'AkP6ZnEk1g4', 'title': 'Da Lama Ao Caos', 'artist': 'Chico Science & Nação Zumbi'}, {'id': 'SLodV54YVcg', 'title': 'Acústico MTV [Live]', 'artist': 'Cidade Negra'}, {'id': 'ciTgs6mLP0s', 'title': 'Cidade Negra - Hits', 'artist': 'Cidade Negra'}, {'id': 'EdxHI7JE2-M', 'title': 'Na Pista', 'artist': 'Cláudio Zoli'}, {'id': 'R96xz4htYt8', 'title': 'Axé Bahia 2001', 'artist': 'Various Artists'}, {'id': '6DEhZNBSiPQ', 'title': 'BBC Sessions [Disc 1] [Live]', 'artist': 'Led Zeppelin'}, {'id': 'mPAfw_uKXpo', 'title': 'Bongo Fury', 'artist': 'Frank Zappa & Captain Beefheart'}, {'id': 'yuQrx6NzoLY', 'title': 'Carnaval 2001', 'artist': 'Various Artists'}, {'id': 'S2QJKDWFJwc', 'title': 'Chill: Brazil (Disc 1)', 'artist': 'Marcos Valle'}, {'id': 'JsJhD4WJgCA', 'title': 'Chill: Brazil (Disc 2)', 'artist': 'Antônio Carlos Jobim'}, {'id': '1-FG2pkcL20', 'title': 'Garage Inc. (Disc 1)', 'artist': 'Metallica'}, {'id': 'cRRMrliwI4g', 'title': 'Greatest Hits II', 'artist': 'Queen'}, {'id': 'nxQCcS0C9Vo', 'title': 'Greatest Kiss', 'artist': 'Kiss'}, {'id': '9NHM_ufNrTc', 'title': 'Heart of the Night', 'artist': 'Spyro Gyra'}, {'id': 'i7EXILndwFU', 'title': 'International Superhits', 'artist': 'Green Day'}, {'id': 'sNDGs8U5eCQ', 'title': 'Into The Light', 'artist': 'David Coverdale'}, {'id': 'ElnSYOQqzfo', 'title': 'Meus Momentos', 'artist': 'Gonzaguinha'}, {'id': 'wcNzb1rULzw', 'title': 'Minha História', 'artist': 'Os Mutantes'}, {'id': 'xHnMumSwspo', 'title': 'MK III The Final Concerts [Disc 1]', 'artist': 'Deep Purple'}, {'id': 'S26NFWw-HTU', 'title': 'Physical Graffiti [Disc 1]', 'artist': 'Led Zeppelin'}, {'id': 'ZjqYmK_buF0', 'title': 'Sambas De Enredo 2001', 'artist': 'Various Artists'}, {'id': 'zwnhFQsJeI0', 'title': 'Supernatural', 'artist': 'Santana'}, {'id': '92-lh_O7dYQ', 'title': 'The Best of Ed Motta', 'artist': 'Ed Motta'}, {'id': '0EUpyJc-9io', 'title': 'The Essential Miles Davis [Disc 1]', 'artist': 'Miles Davis'}, {'id': 'cIjHMXCPca8', 'title': 'The Essential Miles Davis [Disc 2]', 'artist': 'Miles Davis'}, {'id': 'BAB2FCrXKhA', 'title': 'The Final Concerts (Disc 2)', 'artist': 'Deep Purple'}, {'id': 'jRAVSKlfxUk', 'title': \"Up An' Atom\", 'artist': 'Gene Krupa'}, {'id': 'S360kUOVFtw', 'title': 'Vinícius De Moraes - Sem Limite', 'artist': 'Toquinho & Vinícius'}, {'id': 'AhQROz6IQQI', 'title': 'Vozes do MPB', 'artist': 'Various Artists'}, {'id': 'ijXTio-UnhA', 'title': 'Chronicle, Vol. 1', 'artist': 'Creedence Clearwater Revival'}, {'id': '6QQT5hOeFLw', 'title': 'Chronicle, Vol. 2', 'artist': 'Creedence Clearwater Revival'}, {'id': 'Kz-sFJwNR0s', 'title': 'Cássia Eller - Coleção Sem Limite [Disc 2]', 'artist': 'Cássia Eller'}, {'id': 'BCX5S-0K5Ps', 'title': 'Cássia Eller - Sem Limite [Disc 1]', 'artist': 'Cássia Eller'}, {'id': 'xF5Jgw32WkM', 'title': 'Come Taste The Band', 'artist': 'Deep Purple'}, {'id': '5I3iO8SibgI', 'title': 'Deep Purple In Rock', 'artist': 'Deep Purple'}, {'id': '4mqvuteuDfE', 'title': 'Fireball', 'artist': 'Deep Purple'}, {'id': 'daan_J2eJLs', 'title': \"Knocking at Your Back Door: The Best Of Deep Purple in the 80's\", 'artist': 'Deep Purple'}, {'id': 'pof2_9locs4', 'title': 'Machine Head', 'artist': 'Deep Purple'}, {'id': 'PRjacFjainw', 'title': 'Purpendicular', 'artist': 'Deep Purple'}, {'id': 'R9XyYTE5SU0', 'title': 'Slaves And Masters', 'artist': 'Deep Purple'}, {'id': 'CcJvtA3g-JE', 'title': 'Stormbringer', 'artist': 'Deep Purple'}, {'id': 'wDH76IDo1NQ', 'title': 'The Battle Rages On', 'artist': 'Deep Purple'}, {'id': '8pXl8GTBp9E', 'title': \"Vault: Def Leppard's Greatest Hits\", 'artist': 'Def Leppard'}, {'id': 'OJXb91Dphac', 'title': 'Outbreak', 'artist': 'Dennis Chambers'}, {'id': 'WIrVtwSUYR8', 'title': 'Djavan Ao Vivo - Vol. 02', 'artist': 'Djavan'}, {'id': 'sb9DDjsDJyY', 'title': 'Djavan Ao Vivo - Vol. 1', 'artist': 'Djavan'}, {'id': 'lZXMp8ue3aI', 'title': 'Elis Regina-Minha História', 'artist': 'Elis Regina'}, {'id': '-hjnzo3gS-Y', 'title': 'The Cream Of Clapton', 'artist': 'Eric Clapton'}, {'id': 'BNCG0ws2gnM', 'title': 'Unplugged', 'artist': 'Eric Clapton'}, {'id': 'IUMdTZR3ngI', 'title': 'Album Of The Year', 'artist': 'Faith No More'}, {'id': 'DUKPmS05VxA', 'title': 'Angel Dust', 'artist': 'Faith No More'}, {'id': 'gtYKUyhSwVU', 'title': 'King For A Day Fool For A Lifetime', 'artist': 'Faith No More'}, {'id': 'Bhaa1qewljI', 'title': 'The Real Thing', 'artist': 'Faith No More'}, {'id': 'jmDQbkwdJIE', 'title': 'Deixa Entrar', 'artist': 'Falamansa'}, {'id': '_vCAB3YCl1g', 'title': 'In Your Honor [Disc 1]', 'artist': 'Foo Fighters'}, {'id': 'SKKr2Oy4mJA', 'title': 'In Your Honor [Disc 2]', 'artist': 'Foo Fighters'}, {'id': 'eLToZv3tiVs', 'title': 'One By One', 'artist': 'Foo Fighters'}, {'id': 'BNXr5lIiLYM', 'title': 'The Colour And The Shape', 'artist': 'Foo Fighters'}, {'id': '7uHlOy7t3J8', 'title': 'My Way: The Best Of Frank Sinatra [Disc 1]', 'artist': 'Frank Sinatra'}, {'id': 'yIiPyItFawM', 'title': 'Roda De Funk', 'artist': 'Funk Como Le Gusta'}, {'id': 'FRfX9Rfwzos', 'title': 'As Canções de Eu Tu Eles', 'artist': 'Gilberto Gil'}, {'id': 'TNTw9ZUhnno', 'title': 'Quanta Gente Veio Ver (Live)', 'artist': 'Gilberto Gil'}, {'id': 'JurIUVPGxuk', 'title': 'Quanta Gente Veio ver--Bônus De Carnaval', 'artist': 'Gilberto Gil'}, {'id': 'TJE8iaJDnJI', 'title': 'Faceless', 'artist': 'Godsmack'}, {'id': 'esfcxI5t-mQ', 'title': 'American Idiot', 'artist': 'Green Day'}, {'id': '4QkkGnKWyq0', 'title': 'Appetite for Destruction', 'artist': \"Guns N' Roses\"}, {'id': 'timRJyGt73E', 'title': 'Use Your Illusion I', 'artist': \"Guns N' Roses\"}, {'id': 'BADQW6ybMHc', 'title': 'Use Your Illusion II', 'artist': \"Guns N' Roses\"}, {'id': 'X_v-_JyP8PQ', 'title': 'Blue Moods', 'artist': 'Incognito'}, {'id': '-6Dhrwi_WEI', 'title': 'A Matter of Life and Death', 'artist': 'Iron Maiden'}, {'id': 'OQ0GsGBmNx8', 'title': 'A Real Dead One', 'artist': 'Iron Maiden'}, {'id': 'cn2pJ-Q-i3A', 'title': 'A Real Live One', 'artist': 'Iron Maiden'}, {'id': '6DG_ZL2Vg2E', 'title': 'Brave New World', 'artist': 'Iron Maiden'}, {'id': 'ce-sXhgKCUs', 'title': 'Dance Of Death', 'artist': 'Iron Maiden'}, {'id': 'u4y0oiM8ESw', 'title': 'Fear Of The Dark', 'artist': 'Iron Maiden'}, {'id': '7yM8-3GwKEE', 'title': 'Iron Maiden', 'artist': 'Iron Maiden'}]\n",
+        "albums_by_id = {a['id']: a for a in albums}\n",
+        "print(albums_by_id['0EUpyJc-9io'])"
+      ],
+      "execution_count": 0,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{' ': 80,\n",
-              " '\"': 2,\n",
-              " ',': 2,\n",
-              " '.': 6,\n",
-              " ';': 1,\n",
-              " 'A': 1,\n",
-              " 'B': 1,\n",
-              " 'I': 2,\n",
-              " 'L': 1,\n",
-              " 'V': 1,\n",
-              " 'W': 1,\n",
-              " 'a': 28,\n",
-              " 'b': 7,\n",
-              " 'c': 4,\n",
-              " 'd': 22,\n",
-              " 'e': 43,\n",
-              " 'f': 4,\n",
-              " 'g': 13,\n",
-              " 'h': 22,\n",
-              " 'i': 16,\n",
-              " 'k': 5,\n",
-              " 'l': 16,\n",
-              " 'm': 6,\n",
-              " 'n': 20,\n",
-              " 'o': 24,\n",
-              " 'p': 2,\n",
-              " 'r': 20,\n",
-              " 's': 19,\n",
-              " 't': 21,\n",
-              " 'u': 13,\n",
-              " 'v': 2,\n",
-              " 'w': 12,\n",
-              " 'y': 5}"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 10
+          "output_type": "stream",
+          "text": [
+            "{'id': '0EUpyJc-9io', 'title': 'The Essential Miles Davis [Disc 1]', 'artist': 'Miles Davis'}\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
